--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "eslint": "eslint -c .eslintrc.json ./",
     "flow": "flow",
     "check": "npm run flow && npm run lint",
-    "start": "cross-env NODE_ENV=development nodemon --exec babel-node --watch ./ index.js",
+    "postinstall": "babel -d ./dist index.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon --exec babel-node --watch ./ index.js",
+    "start": "node ./dist/index.js",
     "test": "cross-env NODE_ENV=test npm run flow && jest '.*/__tests__/.*(spec)\\.jsx?$'",
     "test:watch": "npm test -- --watch",
     "test:coverage": "npm test -- --coverage"
@@ -40,8 +42,10 @@
     "@deboxsoft/devel": "^1.0.0-rc.1",
     "eslint-plugin-graphql": "^2.1.1",
     "graphql-tag": "^2.9.2",
-    "nodaemon": "^0.0.5",
     "nodemon": "^1.18.3",
     "supertest": "^3.1.0"
+  },
+  "engines": {
+    "node": "10.7.0"
   }
 }
