--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,111 +1,8 @@
 {
   "env": {
-    "node": true,
-    "es6": true
+    "node": true
   },
-  "parser": "babel-eslint",
-  "extends": [
-    "airbnb",
-    "plugin:flowtype/recommended",
-    "prettier",
-    "prettier/flowtype",
-    "prettier/react"
-  ],
   "parserOptions": {
-    "ecmaVersion": 6
-  },
-  "plugins": [
-    "import",
-    "flowtype",
-    "prettier"
-  ],
-  "settings": {
-    "flowtype": {
-      "onlyFilesWithFlowAnnotation": true
-    }
-  },
-  "rules": {
-    "arrow-body-style": [
-      2,
-      "as-needed"
-    ],
-    "arrow-parens": 0,
-    "comma-dangle": [
-      2,
-      "never"
-    ],
-    "max-len": 0,
-    "new-cap": 0,
-    "no-continue": 0,
-    "no-mixed-operators": 0,
-    "no-multi-assign": 0,
-    "no-nested-ternary": 0,
-    "no-param-reassign": 0,
-    "no-plusplus": 0,
-    "no-restricted-syntax": 0,
-    "no-return-assign": 0,
-    "no-tabs": 0,
-    "no-undef": 2,
-    "no-underscore-dangle": 0,
-    "no-unused-expressions": [
-      1,
-      { "allowShortCircuit": true, "allowTernary": true }
-    ],
-    "no-unused-vars": 1,
-    "no-use-before-define": 0,
-    "prefer-rest-params": 0,
-    "import/first": 0,
-    "import/newline-after-import": 0,
-    "import/no-named-default": 0,
-    "import/no-named-as-default": 0,
-    "import/no-extraneous-dependencies": 0,
-    "import/no-dynamic-require": 0,
-    "import/no-mutable-exports": 0,
-    "import/prefer-default-export": 0,
-    "react/forbid-prop-types": 0,
-    "react/jsx-filename-extension": 0,
-    "react/jsx-indent": [
-      2,
-      2
-    ],
-    "react/jsx-quotes": 0,
-    "react/jsx-space-before-closing": 0,
-    "react/jsx-tag-spacing": 0,
-    "react/no-unused-prop-types": [
-      1,
-      { "skipShapeProps": true }
-    ],
-    "react/prop-types": 0,
-    "react/require-default-props": 0,
-    "react/require-extension": 0,
-    "react/sort-comp": [
-      1,
-      {
-        "order": [
-          "type-annotations",
-          "static-methods",
-          "lifecycle",
-          "everything-else",
-          "render"
-        ]
-      }
-    ],
-    "prettier/prettier": "error"
-  },
-  "overrides": [
-    {
-      "files": [
-        "**/*.spec.js",
-        "**/*.test.js"
-      ],
-      "env": {
-        "jest": true
-      },
-      "globals": {
-        "render": true,
-        "shallow": true,
-        "mount": true
-      }
-    }
-  ]
+    "ecmaVersion": 2017
+  }
 }
