--- a/.flowconfig
+++ b/.flowconfig
@@ -1,6 +1,6 @@
 ;suppress inspection "DuplicateKeyInSection" for whole file
 [ignore]
-
+.*/node_modules/config-chain/.*
 
 [include]
 
@@ -13,3 +13,4 @@ emoji=true
 esproposal.class_static_fields=enable
 esproposal.class_instance_fields=enable
 esproposal.export_star_as=enable
+module.ignore_non_literal_requires=true
